Added blur and improved text

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 							<span class="icon thin fa-user"></span>
 						</div>
 						<div class="content">
-							<div class="inner">
+							<div class="inner" style="backdrop-filter: blur(4px);background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4));">
 								<h1>Kirill Vinogradov</h1>
-								<p><br>🧑‍💻Senior Data Scientist at PwC</br>
-								📈Transforming Data into Actionable Insights
-								<br>🎓Specialized in Data Analytics, Data Science, and Data Engineering</br>
-								📊Excellent Presentation Skills and Leadership Abilities</p>
+								<p>🧑‍💻Senior Data Scientist at PwC</p>
+								<p>📈Transforming Data into Actionable Insights</p>
+								<p>🎓Specialized in Data Analytics, Data Science, and Data Engineering</p>
+							    <p>📊Excellent Presentation Skills and Leadership Abilities	</p>
 							</div>
 						</div>
 						<nav>
