--- a/en/index.html
+++ b/en/index.html
@@ -180,7 +180,7 @@
 								<span class="image main"><img src="images/contact.jpg" alt="" /></span>
 								<p>Thank you for showing your interest in me. Please find the contact methods below.</p>
 								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/kirill-vinogradov-kv/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/k-vinogradov/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="mailto:vinogradov.kirill.vk@gmail.com" class="icon fa-solid fa-envelope"><span class="label">Gmail</span></a></li>
 								</ul>
 							</article>
